# qtvr

./: CMakeLists.txt
app/: CMakeLists.txt
app/resources/: 4dK3WR.json  ShadertoyVR.qrc  shadertoy.json  shadertoys.tgz
app/resources/controllers/: standard.json  standard_navigation.json
app/resources/misc/: defaultShadertoy.json  glsl.xml  shadertoy.json
app/resources/qml/: QmlWindow.qml  Root.qml  RootMenu.qml
app/resources/qml/controls/: Border.qml  Button.qml  FocusMarker.qml
app/resources/qml/controls/crossbar/: CrossBar.qml  CrossBarChild.qml  CrossBarItem.qml  CrossBarMenuChild.qml  qmldir
app/resources/qml/desktop/: Desktop.qml  FocusHack.qml
app/resources/qml/dialogs/: FileDialog.qml  MessageDialog.qml  QueryDialog.qml
app/resources/qml/menus/: Menu.qml  MenuBar.qml  MenuItem.qml  VrMenuItem.qml  VrMenuView.qml
app/resources/qml/shadertoy/: AppDesktop.qml  AppMenu.qml  Browser.qml  Editor.html  Editor.qml  Input.qml  Renderpass.qml  Shader.qml  ShaderInfo.qml  ShaderPreview.qml  Shadertoy.qml  ShadertoyAPI.qml  Splash.qml  Stats.qml  TextureImage.qml  TexturePicker.qml  shadertoy.json  tst.js
app/resources/qml/trains/: AppDesktop.qml  ModelBrowser.qml
app/resources/qml/windows/: CenteredWindow.qml  Fadable.qml  Frame.qml  Window.qml
app/resources/shaders/: ColorCube.fs  ColorCube.vs  CubeMap.fs  CubeMap.vs  Simple.vs  SimpleColored.fs  SimpleTextured.fs
app/resources/shadertoys/: 4d23WG.json  4d2XD3.json  4d2XWV.json  4d2Xzc.json  4d2Xzw.json  4d33DN.json  4d33z4.json  4d33zM.json  4d3GRr.json  4d3GW7.json  4d3GWS.json  4d3GzS.json  4d3Gzn.json  4dBGDR.json  4dBGWG.json  4dBSRK.json  4dBXDd.json  4dBXz3.json  4dG3R1.json  4dG3RW.json  4dG3WR.json  4dGGD1.json  4dGGDz.json  4dGGz1.json  4dGGzD.json  4dK3WR.json  4dK3zD.json  4dKGR1.json  4dS3Dc.json  4dSGW1.json  4dSSW1.json  4dSSWV.json  4dSXWR.json  4dSXWt.json  4dSXzR.json  4dVGRR.json  4dVGRW.json  4dVGzw.json  4dX3Rn.json  4dX3zj.json  (+2078 more)
app/src/: Application.cpp  Application.h  main.cpp
app/src/shadertoy/: Cache.cpp  Cache.h  Input.cpp  Input.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Renderpass.cpp  Renderpass.h  Shader.cpp  Shader.h  ShaderInfo.cpp  ShaderInfo.h  ShaderModel.cpp  ShaderModel.h  Shadertoy.cpp  Shadertoy.h
app/src/shadertoy/types/: Input.cpp  Input.h  Renderpass.cpp  Renderpass.h  Shader.cpp  Shader.h  ShaderInfo.cpp  ShaderInfo.h
cmake/macros/: SetupHifiPlugin.cmake  SetupHifiTestCase.cmake  TargetVulkan.cmake
cmake/modules/: FindGLFW.cmake
cmake/templates/: FixupBundlePostBuild.cmake.in
libraries/app/: CMakeLists.txt
libraries/app/src/app/: PluginContainerProxy.cpp  PluginContainerProxy.h  RenderableApplication.cpp  RenderableApplication.h
libraries/controllers/: CMakeLists.txt
libraries/controllers/src/controllers/: Pose.cpp  Pose.h  ScriptingInterface.h  UserInputMapper.cpp  UserInputMapper.h
libraries/gl/src/gl/: GLApplication.cpp  GLApplication.h  GLEscrow.h  GLHelpers.cpp  GLHelpers.h  GLWindow.cpp  GLWindow.h  OglplusHelpers.cpp  OglplusHelpers.h  QOpenGLContextWrapper.cpp  QOpenGLContextWrapper.h  ThreadedGLCanvas.cpp  ThreadedGLCanvas.h
libraries/gpu/: CMakeLists.txt
libraries/gpu-utils/: CMakeLists.txt
libraries/gpu/src/gpu/: Batch.cpp  Batch.h  Context.cpp  Format.h  Forward.h  FramebufferCache.cpp  FramebufferCache.h  Query.cpp  Query.h  ShaderCache.h  TextureCache.cpp  TextureCache.h
libraries/gpu/src/procedural/: Procedural.cpp  Procedural.h
libraries/networking/src/: HTTPResourceRequest.cpp  ResourceCache.cpp  ResourceManager.cpp
libraries/plugins/: CMakeLists.txt
libraries/plugins/src/plugins/: DisplayPlugin.cpp  DisplayPlugin.h  Forward.h  InputPlugin.cpp  Plugin.h  PluginApplication.cpp  PluginApplication.h  (+2 more)
libraries/render-utils/: CMakeLists.txt
libraries/render-utils/src/: AbstractViewStateInterface.cpp  AbstractViewStateInterface.h  GeometryCache.cpp  GeometryCache.h  TextureCache.h
libraries/shared/: CMakeLists.txt
libraries/shared/src/: FileLogger.cpp  FileLogger.h  FileUtils.cpp  FileUtils.h  GLMHelpers.cpp  GLMHelpers.h  HifiApplication.cpp  HifiApplication.h  Menu.cpp  Menu.h  Plane.cpp  Platform.cpp  Platform.h  RegisteredMetaTypes.cpp  RegisteredMetaTypes.h  ResourceCache.cpp  ResourceCache.h  ResourceManager.cpp  ResourceManager.h  ScriptValueUtils.cpp  ScriptValueUtils.h  SettingManager.cpp  SettingManager.h  SharedUtil.cpp  SharedUtil.h  ThreadHelpers.h  ViewFrustum.cpp  ViewFrustum.h
libraries/ui/: CMakeLists.txt
libraries/ui/src/: CursorManager.cpp  CursorManager.h  InfoView.cpp  OffscreenQmlElement.h  OffscreenQmlSurface.cpp  OffscreenQmlSurface.h  OffscreenUi.cpp  OffscreenUi.h  Tooltip.cpp  Tooltip.h  UiApplication.cpp  UiApplication.h  VrMenu.cpp
libraries/vulkan/: CMakeLists.txt
plugins/hifiSdl2/: CMakeLists.txt
plugins/hifiSdl2/src/: SDL2Manager.cpp  SDL2Manager.h
plugins/hifiSixense/: CMakeLists.txt
plugins/oculus/: CMakeLists.txt
plugins/oculus/src/: OculusBaseDisplayPlugin.cpp  OculusBaseDisplayPlugin.h  OculusDisplayPlugin.cpp
plugins/oculusLegacy/src/: OculusLegacyDisplayPlugin.cpp
plugins/openvr/: CMakeLists.txt
plugins/plugOculus/: CMakeLists.txt
plugins/plugOculus/src/: OculusBaseDisplayPlugin.cpp  OculusBaseDisplayPlugin.h  OculusControllerManager.cpp  OculusDebugDisplayPlugin.h  OculusDisplayPlugin.cpp  OculusDisplayPlugin.h
plugins/plugOculusLegacy/: CMakeLists.txt
plugins/plugOpenVR/: CMakeLists.txt
plugins/plugOpenVR/src/: OpenVrDisplayPlugin.cpp  OpenVrDisplayPlugin.h  OpenVrProvider.cpp
plugins/plugSDL2/: CMakeLists.txt
plugins/plugSDL2/src/: SDL2Manager.h
plugins/plugSixense/: CMakeLists.txt
plugins/plugSixense/src/: SixenseManager.cpp  SixenseManager.h
test/: uitest.pro
test/qml/: Stubs.qml  main.qml
test/src/: main.cpp
(+43 files in other folders)
